compiler/tools/fpp-check/test/command/duplicate_name.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/command/duplicate_name.fpp: 4.3
  sync command C
  ^
error: duplicate command name C
previous occurrence is here:
[ local path prefix ]/compiler/tools/fpp-check/test/command/duplicate_name.fpp: 3.3
  async command C
  ^
